# py-app-template

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  run-backend-services.yml  run-base-services.yml  run-broker-services.yml  run-nginx-service.yml  run-s3-service.yml
.github/workflows/: linters.yaml
backend/: main.py  service.py  settings.py
backend/tests/: test_root.py  test_say_goodbye.py  test_say_hello.py
configs/nginx/: nginx.conf
configs/s3/: docker-entrypoint.sh
scripts/: start.sh
